Blank Challenge Page + Challenge Parser Framework

--- a/Monstrum Extended Settings Mod.csproj
+++ b/Monstrum Extended Settings Mod.csproj
@@ -44,6 +44,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="BaseFeatures.cs" />
+    <Compile Include="ChallengeParser.cs" />
     <Compile Include="CrewVsMonsterMode.cs" />
     <Compile Include="ExtendedSettingsMod.cs" />
     <Compile Include="InGameMenu.cs" />
