--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "build",
+            "label": "generate",
             "command": "H:/Visual Studio/Visual Studio/MSBuild/Current/Bin/MSBuild.exe", // Main / Sentinel computer
             //"command": "C:/Program Files/Microsoft Visual Studio/2022/Community/MSBuild/Current/Bin/MSBuild.exe", // Remote / Strathclyde computer
             //"command": "F:/Program Files/Microsoft Visual Studio/2022/Community/MSBuild/Current/Bin/MSBuild.exe", // Bueckeburg computer
@@ -13,16 +13,43 @@
             "args": [
                 "Monstrum Extended Settings Mod.csproj",
                 "/t:Build",
-                "/p:Configuration=Debug",
-                "/p:Platform=\"AnyCPU\"",
+                "/property:GenerateFullPaths=true",
+                "/consoleloggerparameters:NoSummary",
+                "/p:DebugType=None", // Don't build pdb.
                 "/p:OutputPath=\"H:/SteamLibrary/steamapps/common/Monstrum/Mods\"", // Main / Sentinel computer
                 //"/p:OutputPath='C:/Program Files (x86)/Steam/steamapps/common/Monstrum/Mods'", // Remote / Strathclyde computer
                 //"/p:OutputPath=\"F:/SteamLibrary/steamapps/common/Monstrum/Mods\"", // Bueckeburg computer
-                "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary",
-                "/p:DebugType=None" // Don't build pdb.
             ],
-            "problemMatcher": []
+        },
+        {
+            "label": "copyAppID",
+            "command": "copy appid.txt 'H:/SteamLibrary/steamapps/common/Monstrum\"'",
+            "type": "shell"
+        },
+        {
+            "label": "copyMESMReadme",
+            "command": "copy 'MESM Readme.txt' 'H:/SteamLibrary/steamapps/common/Monstrum\"'",
+            "type": "shell"
+        },
+        {
+            "label": "copyChallenges",
+            "command": "copy -r Challenges/. 'H:/SteamLibrary/steamapps/common/Monstrum\"' -Force",
+            "type": "shell"
+        },
+        {
+            "label": "copyAssetBundles",
+            "command": "copy -r MESMAssetBundles/. 'H:/SteamLibrary/steamapps/common/Monstrum/Mods\"' -Force",
+            "type": "shell"
+        },
+        {
+            "label": "build",
+            "dependsOn": [
+                "copyAppID",
+                "copyMESMReadme",
+                "copyChallenges",
+                "copyAssetBundles",
+                "generate"
+            ]
         }
     ]
 }
